# git-time

./: README.rst  pyproject.toml
git_time/: __main__.py  cli.py
