[tool.poetry]
name = "git-time"
version = "0.1.0"
description = "Time your tasks from within git."
authors = ["Łukasz Wieczorek <wieczorek1990@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
git-time = "git_time.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
